force-app/main/default/objects/BrillioFC__Visualforce_Assignment__c/BrillioFC__Visualforce_Assignment__c.object-meta.xml
<CustomObject>
    <label>ForceClinic Visualforce Assignment</label>
    <nameField>
        <label>ForceClinic Visualforce Assignment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ForceClinic Visualforce Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>