force-app/main/default/objects/BrillioFC__Visualforce_Assignment__c/fields/BrillioFC__Profile_Name__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__Profile_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Profile Name</label>
    <referenceTo>BrillioFC__Profile_Detail__c</referenceTo>
    <relationshipLabel>ForceClinic Visualforce Assignments</relationshipLabel>
    <relationshipName>Visualforce_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>