force-app/main/default/objects/BrillioFC__Visualforce_Assignment__c/fields/BrillioFC__VisualforcePage_Name__c.field-meta.xml
<CustomField>
    <fullName>BrillioFC__VisualforcePage_Name__c</fullName>
    <label>Visualforce Page Name</label>
    <referenceTo>BrillioFC__Visualforce_Page__c</referenceTo>
    <relationshipLabel>ForceClinic Visualforce Assignments</relationshipLabel>
    <relationshipName>Visualforce_Assignments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>